components/policies/development/integration/bootstrap-namespace/.chainsaw-test/resources/actual-namespace-konfluxcidev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: (join('-', [$namespace, $suffix]))
  labels:
    konflux-ci.dev/type: tenant
